Fix side panel getting too large

--- a/templates/default/src/scss/components/_side-panel.scss
+++ b/templates/default/src/scss/components/_side-panel.scss
@@ -6,6 +6,7 @@
 
         .has-frames & {
             flex: 1 1 auto;
+            max-width: 40%;
         }
     }
 }
